--- a/src/tpl-generator/templates/default/assets/scss/main.scss
+++ b/src/tpl-generator/templates/default/assets/scss/main.scss
@@ -1,8 +1,18 @@
 :global {
   @import './core/material';
 
-  body{
-    background: red;
+  body {
+    //font-family: 'Roboto';
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-self: stretch;
+    overflow: hidden;
+  }
+
+  html {
+    margin: 0;
+    padding: 0;
   }
 }
 
